--- a/index.html
+++ b/index.html
@@ -1,138 +1,231 @@
-
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Love Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Pesan untuk Sayang</title>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
-      background: url('https://images.unsplash.com/photo-1519125323398-675f0ddb6308') no-repeat center center fixed;
-      background-size: cover;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom, #ffafbd, #ffc3a0);
       overflow: hidden;
-    }.particle-container {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  pointer-events: none;
-}
+    }
 
-.frame-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 320px;
-  height: auto;
-  background: url('cat_border_frame.png') no-repeat center center;
-  background-size: contain;
-  padding: 130px 30px 80px 30px;
-  text-align: center;
-}
+    .overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.8);
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      z-index: 5;
+    }
 
-.typed-text {
-  font-size: 18px;
-  color: #444;
-  line-height: 1.5em;
-}
+    .overlay button {
+      margin-top: 20px;
+      padding: 12px 25px;
+      font-size: 18px;
+      background-color: #ff69b4;
+      border: none;
+      border-radius: 10px;
+      color: white;
+      cursor: pointer;
+    }
 
+    #message-box {
+      border: 3px dashed #fff;
+      border-radius: 20px;
+      background-color: rgba(0,0,0,0.4);
+      color: white;
+      padding: 25px;
+      width: 80%;
+      max-width: 600px;
+      text-align: center;
+      font-size: 20px;
+      position: relative;
+      z-index: 2;
+      margin: 100px auto 20px;
+    }
+
+    #kucing {
+      position: fixed;
+      bottom: 20px;
+      left: 0;
+      width: 100px;
+      height: auto;
+      animation: gerakKucing 10s linear infinite;
+      z-index: 3;
+    }
+
+    @keyframes gerakKucing {
+      0% {
+        left: -100px;
+        transform: scaleX(1);
+      }
+      50% {
+        left: 100vw;
+        transform: scaleX(1);
+      }
+      51% {
+        transform: scaleX(-1);
+      }
+      100% {
+        left: -100px;
+        transform: scaleX(-1);
+      }
+    }
+
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-bottom: 50px;
+      z-index: 2;
+      position: relative;
+    }
+
+    .gallery img {
+      width: 120px;
+      height: 120px;
+      margin: 10px;
+      border: 5px solid pink;
+      border-radius: 15px;
+      object-fit: cover;
+    }
+
+    canvas#particles {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 1;
+    }
+
+    @media (max-width: 600px) {
+      #message-box {
+        font-size: 18px;
+        padding: 15px;
+      }
+      .gallery img {
+        width: 90px;
+        height: 90px;
+      }
+    }
   </style>
 </head>
 <body>
-  <div class="particle-container">
-    <canvas id="particles"></canvas>
-  </div>  <div class="frame-container">
-    <div id="typed" class="typed-text"></div>
-  </div>  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>  <script>
-    var typed = new Typed("#typed", {
-      strings: [
-        "Hai sayang...",
-        "Kamu tau gak?",
-        "Setiap detik bersamamu itu berharga banget.",
-        "Aku gak sabar buat ngelewatin hari-hari bareng kamu terus.",
-        "Love you always!"
-      ],
-      typeSpeed: 50,
-      backSpeed: 25,
-      backDelay: 2500,
-      loop: true
-    });
-  </script>  <script>
-    const canvas = document.getElementById('particles');
-    const ctx = canvas.getContext('2d');
-    let particlesArray;
+  <div class="overlay" id="overlay">
+    <div class="warning">
+      <p>Apakah kamu yakin ingin menekan lanjutkan?</p>
+      <button onclick="startWebsite()">Lanjutkan</button>
+    </div>
+  </div>
 
+  <audio id="bg-music" src="music.mp3" preload="auto"></audio>
+
+  <canvas id="particles"></canvas>
+
+  <div id="message-box">
+    <p id="text"></p>
+  </div>
+
+  <div class="gallery" id="gallery" style="display:none;">
+    <img src="img1.jpg" />
+    <img src="img2.jpg" />
+    <img src="img3.jpg" />
+    <img src="img4.jpg" />
+  </div>
+
+  <img src="cat.gif" id="kucing" alt="Kucing lucu" />
+
+  <script>
+    const texts = [
+      "Halooo Sayangkuu cantikku",
+      "pesan ini buat kamuu",
+      "iyaa kamu doang pake nanya",
+      "Meskipun kisah kita baru, tapi akan jadi indah kelak.",
+      "Aku mencintaimu seperti langit yang selalu indah.",
+      "Kamulah duniaku.",
+      "Kita kenal karena takdir (dan aku cari-cari juga hehe).",
+      "Perasaanku tulus dan nyata.",
+      "Terima kasih telah mewarnai hariku.",
+      "Love you three thousand more!"
+    ];
+
+    let i = 0;
+    const textEl = document.getElementById("text");
+
+    function startWebsite() {
+      document.getElementById("overlay").style.display = "none";
+      document.getElementById("gallery").style.display = "flex";
+
+      const audio = document.getElementById("bg-music");
+      audio.volume = 0;
+      audio.play();
+
+      let vol = 0;
+      const fadeIn = setInterval(() => {
+        if (vol < 1) {
+          vol += 0.05;
+          audio.volume = vol;
+        } else {
+          clearInterval(fadeIn);
+        }
+      }, 200);
+
+      tampilkanTeks();
+    }
+
+    function tampilkanTeks() {
+      if (i < texts.length) {
+        textEl.style.opacity = 0;
+        setTimeout(() => {
+          textEl.innerText = texts[i];
+          textEl.style.opacity = 1;
+          i++;
+          setTimeout(tampilkanTeks, 3000);
+        }, 500);
+      }
+    }
+
+    // Partikel sederhana (bintang jatuh)
+    const canvas = document.getElementById("particles");
+    const ctx = canvas.getContext("2d");
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
 
-    window.addEventListener('resize', function() {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-      init();
-    });
-
-    const colors = ['#ff69b4', '#ffb6c1', '#ff1493', '#ffc0cb'];
-
-    function Particle(x, y, directionX, directionY, size, color) {
-      this.x = x;
-      this.y = y;
-      this.directionX = directionX;
-      this.directionY = directionY;
-      this.size = size;
-      this.color = color;
+    const particles = [];
+    for (let i = 0; i < 100; i++) {
+      particles.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        r: Math.random() * 2 + 1,
+        dx: Math.random() - 0.5,
+        dy: Math.random() * 1 + 0.5
+      });
     }
 
-    Particle.prototype.draw = function() {
-      ctx.beginPath();
-      ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2, false);
-      ctx.fillStyle = this.color;
-      ctx.fill();
+    function drawParticles() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "#ffffff";
+      particles.forEach(p => {
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2);
+        ctx.fill();
+        p.x += p.dx;
+        p.y += p.dy;
+        if (p.y > canvas.height) p.y = 0;
+        if (p.x > canvas.width || p.x < 0) p.x = Math.random() * canvas.width;
+      });
+      requestAnimationFrame(drawParticles);
     }
 
-    Particle.prototype.update = function() {
-      if (this.x + this.size > canvas.width || this.x - this.size < 0) {
-        this.directionX = -this.directionX;
-      }
-      if (this.y + this.size > canvas.height || this.y - this.size < 0) {
-        this.directionY = -this.directionY;
-      }
-
-      this.x += this.directionX;
-      this.y += this.directionY;
-      this.draw();
-    }
-
-    function init() {
-      particlesArray = [];
-      let numberOfParticles = 100;
-
-      for (let i = 0; i < numberOfParticles; i++) {
-        let size = Math.random() * 3 + 1;
-        let x = Math.random() * (innerWidth - size * 2);
-        let y = Math.random() * (innerHeight - size * 2);
-        let directionX = (Math.random() - 0.5) * 1;
-        let directionY = (Math.random() - 0.5) * 1;
-        let color = colors[Math.floor(Math.random() * colors.length)];
-
-        particlesArray.push(new Particle(x, y, directionX, directionY, size, color));
-      }
-    }
-
-    function animate() {
-      requestAnimationFrame(animate);
-      ctx.clearRect(0, 0, innerWidth, innerHeight);
-
-      for (let i = 0; i < particlesArray.length; i++) {
-        particlesArray[i].update();
-      }
-    }
-
-    init();
-    animate();
-  </script></body>
+    drawParticles();
+  </script>
+</body>
 </html>
-   
