--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html>
+    !DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
@@ -52,34 +52,6 @@
       position: relative;
       z-index: 2;
       margin: 100px auto 20px;
-    }
-
-    #kucing {
-      position: fixed;
-      bottom: 20px;
-      left: 0;
-      width: 100px;
-      height: auto;
-      animation: gerakKucing 10s linear infinite;
-      z-index: 3;
-    }
-
-    @keyframes gerakKucing {
-      0% {
-        left: -100px;
-        transform: scaleX(1);
-      }
-      50% {
-        left: 100vw;
-        transform: scaleX(1);
-      }
-      51% {
-        transform: scaleX(-1);
-      }
-      100% {
-        left: -100px;
-        transform: scaleX(-1);
-      }
     }
 
     .gallery {
@@ -142,11 +114,9 @@
     <img src="img4.jpg" />
   </div>
 
-  <img src="cat.gif" id="kucing" alt="Kucing lucu" />
-
   <script>
     const texts = [
-     "Halooo Sayangkuu cantikku ",
+      "Halooo Sayangkuu cantikku",
       "pesan ini buat kamuu",
       "iyaa kamu doang pake nanya☺️",
       "sayaangg meskipun kisah kita terbilang baru namun akan ku pastikan",
@@ -157,7 +127,7 @@
       "namun perasaanku kepadamu Memang benar adanya dan sangat sangat tulus (no fek fek)",
       "jangan pernah ragu menceritakan segala hal yang terjadi di sepanjang hidupmu",
       "asalkan kamu tau setiap hal aku adalah tentangmu dan akan selalu begitu",
-      "maafkan laki lakimu ini yang masih belum bisa memenuhi ekspetasimu"
+      "maafkan laki lakimu ini yang masih belum bisa memenuhi ekspetasimu",
       "Terimakasih Telah kembali mewarnai hari hari gelapku",
       "Terimakasih sayangkuu",
       "harapanku kita akan selalu bersama hingga menjadi satu",
